--- a/src/app/maps/page.html
+++ b/src/app/maps/page.html
@@ -6,6 +6,7 @@
     <title>Maps | Strinova Fan Page</title>
     <link rel="icon" href="/public/facion.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="/src/app/globals.css" />
+    <link rel="stylesheet" type="text/css" href="map.css" />
   </head>
   <body>
     <nav class="navbar">
@@ -16,10 +17,12 @@
         <div><a href="/src/app/mechanics/page.html">MECHANICS</a></div>
       </div>
     </nav>
-    <div id="Maps">
-      <h1>Maps</h1>
-      <div id="Demolition/Ranked/TDM">
-        <h2>Demolition/Ranked/TDM</h2>
+    <div id="maps">
+      <div class="background"></div>
+      <div class="gradient-box"></div>
+      <h1 class="title">MAPS</h1>
+      <h2 class="gamemode-title">Demolition/Ranked/TDM</h2>
+      <div id="drt">
         <p>
           Demolition and Ranked is a 5v5 gamemode where P.U.S and Scissors go against eachother, P.U.S defends while
           Scissors attack. Urbino helps both sides.
@@ -65,9 +68,9 @@
         </div>
       </div>
       <hr />
-      <div id="Team Arena">
-        <h2>Team Arena</h2>
-        <p>A 10v10 Gamemode where you try to get to 50 kills the fastest</p>
+      <h2 class="gamemode-title">Team Arena</h2>
+      <p class="text">A 10v10 Gamemode where you try to get to 50 kills the fastest</p>
+      <div id="drt">
         <div id="Blossom Archery Dojo">
           <h3>Blossom Archery Dojo</h3>
           <img src="/public/maps/blossom-archery-dojo/BLOSSOM ARCHERY DOJO.jpg" width="400" />
@@ -95,9 +98,9 @@
         </div>
       </div>
       <hr />
-      <div id="Escort">
-        <h2>Escort</h2>
-        <p>A Escort style game where one team needs to escort the payload while the other team trys to stop them.</p>
+      <h2 class="gamemode-title">Escort</h2>
+      <p class="text">A Escort style game where one team needs to escort the payload while the other team trys to stop them.</p>
+      <div id="drt">
         <div id="Departure Zone">
           <h3>Departure Zone</h3>
           <img src="/public/maps/departure-zone/DEPARTURE ZONE.jpg" width="400" />
@@ -115,12 +118,13 @@
         </div>
       </div>
       <hr />
-      <div id="Outbreak">
-        <h2>Outbreak</h2>
-        <p>
-          A survival game where the characters need to survival against unknown beings that act like zombies that
-          appeared after an outbreak.
-        </p>
+      <h2>Outbreak</h2>
+      <pclass="text">
+        A survival game where the characters need to survival against unknown beings that act like zombies that
+        appeared after an outbreak.
+      </p >
+
+      <div id="drt">
         <div id="Polar Research Institute">
           <h3>Polar Research Institute</h3>
           <img src="/public/maps/polar-research-institute/Polar Research Institute.jpg" width="400" />
