--- a/src/app/agents/routes/Bai Mo.html
+++ b/src/app/agents/routes/Bai Mo.html
@@ -6,103 +6,160 @@
     <title>Bai Mo | Strinova Fan Page</title>
     <link rel="icon" href="/public/facion.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="/src/app/globals.css" />
+    <link rel="stylesheet" type="text/css" href="../pus-agent.css" />
   </head>
   <body>
     <nav class="navbar">
       <div class="main"><a href="/src/app/index.html">STRINOVA</a></div>
       <div class="sub">
-        <div><a href="/src/app/agents/page.html">Agents</a></div>
-        <div><a href="/src/app/maps/page.html">Maps</a></div>
-        <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
+        <a href="/src/app/agents/page.html">AGENTS</a>
+        <a href="/src/app/maps/page.html">MAPS</a>
+        <a href="/src/app/mechanics/page.html">MECHANICS</a>
       </div>
     </nav>
-    <div id="Bai Mo">
-      <img src="/public/agents/baimo/Bai Mo.webp" alt="Bai Mo" width="400" />
-      <h1>Bai Mo</h1>
-      <h3>Role: Duelist</h3>
-      <h2>Background</h2>
-      <p>
-        The young lord of Urbino, who dislikes constraints and is often elusive but always steps up at crucial moments.
-      </p>
-      <p></p>
-    </div>
-    <hr />
-    <div id="Bai Mo-Skills">
-      <h2>Skills</h2>
-      <div id="Bai Mo-ActiveSkill">
-        <h3>Active Skill: Blitz Waltz</h3>
-        <img src="/public/agents/baimo/Bai Mo Active Skill.webp" alt="Bai Mo ActiveSkill" />
-        <p>Type: Dash</p>
-        <p>
-          Bai Mo zooms forward and automatically reloads his shotgun with two shells. CD refreshes on kills and assists.
-        </p>
-        <h4>Details</h4>
-        <ul>
-          <li>Cooldown: 20s</li>
-          <li>Cooldown reduced per pellet hit: 4%</li>
-        </ul>
-        <h4>How to play</h4>
-        <video width="400" controls autoplay loop>
-          <source src="/public/agents/baimo/Bai Mo Active Vid.mp4" />
-        </video>
+
+    <div class="agent">
+      <div class="agent-image-container">
+        <img class="agent-symbol" src="/public/bg/urbino-symbol.png" width="500" />
+        <img class="agent-image" src="/public/agents/baimo/Bai Mo.webp" alt="Michele" width="500" />
       </div>
-      <div id="Bai Mo-PassiveSkill">
-        <h3>Passive Skill: Dance Shackle</h3>
-        <img src="/public/agents/baimo/Bai Mo Passive Skill.webp" alt="Bai Mo PassiveSkill" />
-        <p>Type: Weaken</p>
-        <p>Bai Mo's primary weapon string-blocks enemies upon dealing at least 50 DMG in a single shot.</p>
-        <h4>Details</h4>
-        <ul>
-          <li>Stringfield Block: 1sec</li>
-          <li></li>
-        </ul>
-        <h4>How to play</h4>
-        <video width="400" controls autoplay loop>
-          <source src="/public/agents/baimo/Bai Mo Passive Vid.mp4" />
-        </video>
+      <div class="main-stuff">
+        <h1 class="title">BAI MO</h1>
+        <img class="emoji" src="/public/emojis/bai-mo-emoji.webp">
+        <div class="subtitles">
+          <p data-role="about">ABOUT </p>
+          <p data-role="skills">SKILLS </p>
+          <p data-role="weapons">WEAPONS </p>
+          <p data-role="upgrades">UPGRADES </p>
+        </div>
+        <div>
+          <div id="about">
+            <h3>Role: Duelist</h3>
+            <p>
+              The young lord of Urbino, who dislikes constraints and is often elusive but always steps up at crucial moments.
+            </p>
+          </div>
+          <div id="skills" class="skills">
+            <div class="skill-images">
+              <img
+                src="/public/agents/baimo/Bai Mo Active Skill.webp"
+                data-role="active-skill"
+                alt="bai-mo ActiveSkill"
+              />
+              <img
+                src="/public/agents/baimo/Bai Mo Passive Skill.webp"
+                data-role="passive-skill"
+                alt="bai-mo PassiveSkill"
+              />
+              <img
+                src="/public/agents/baimo/Bai Mo Ultimate Skill.webp"
+                data-role="ultimate-skill"
+                alt="bai-mo UltimateSkill"
+              />
+            </div>
+            <div class="skill-title">
+              <p data-role="about">ABOUT</p>
+              <p data-role="details">DETAILS</p>
+              <p data-role="video">VIDEO</p>
+            </div>
+            <div>
+              <div id="active-skill">
+                <div id="about">
+                  <div class="active-about" data-role="about-skill">
+                    <h3 class="skill-name">Blitz Waltz</h3>
+                    <p>Type: Weaken</p>
+                    <p>
+                      Bai Mo zooms forward and automatically reloads his shotgun with two shells. CD refreshes on kills and assists.
+                    </p>
+                  </div>
+                </div>
+                <div id="details">
+                  <h3 class="skill-name">Blitz Waltz</h3>
+                  <h4>Details</h4>
+                  <ul>
+                    <li>Cooldown: 20s</li>
+                    <li>Cooldown reduced per pellet hit: 4%</li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <h3 class="skill-name">Blitz Waltz</h3>
+                  <video width="400" controls loop>
+                    <source src="/public/agents/baimo/Bai Mo Active Vid.mp4" />
+                  </video>
+                </div>
+              </div>
+              <div id="passive-skill">
+                <div id="about">
+                  <h3 class="skill-name" >Dance Shackle</h3>
+                  <p>Type: Paint Tracks</p>
+                  <p>
+                    Bai Mo's primary weapon string-blocks enemies upon dealing at least 50 DMG in a single shot.
+                  </p>
+                </div>
+                <div id="details">
+                  <h3 class="skill-name" >Dance Shackle</h3>
+                  <h4>Details</h4>
+                  <ul>
+                    <li>Stringfield Block: 1sec</li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <h3 class="skill-name" >Dance Shackle</h3>
+                  <video width="400" controls loop>
+                    <source src="/public/agents/baimo/Bai Mo Passive Vid.mp4" />
+                  </video>
+                </div>
+              </div>
+              <div id="ultimate-skill">
+                <div id="about">
+                  <h3 class="skill-name">Streetfighter</h3>
+                  <p>Type: Teleport</p>
+                  <p>
+                    Bai Mo places a Beacon. If he's downed or killed, he can instantly respawn there. Pressing the ultimate skill
+                    key again will teleport him to the Beacon at any time, fully restoring his HP.
+                  </p>
+                </div>
+                <div id="details">
+                  <h3 class="skill-name">Streetfighter</h3>
+                  <h4>Details</h4>
+                  <ul>
+                    <li>Cost: 6 Ultimate Points</li>
+                    <li>Beacon HP: 100</li>
+                    <li>Beacon Duration: 20 seconds</li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <h3 class="skill-name">Streetfighter</h3>
+                  <video width="400" controls loop>
+                    <source src="/public/agents/baimo/Bai Mo Ultimate Vid.mp4" />
+                  </video>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="weapons" data-role="weapon">
+            <h3>Primary Gun: Freedom Reign</h3>
+            <img src="/public/agents/baimo/Bai_Mo_GrowthWeapon.png" />
+            <p>
+              Highly reliable and durable, this semi-automatic combat shotgun features ghost ring sights for improved accuracy. Equipped with a 1.25x scope.
+            </p>
+          </div>
+          <div id="upgrades" data-role="upgrades">  
+            <h2>Upgrades</h2>
+            <img src="/public/agents/baimo/Bai Mo Accuracy.png" loading="lazy" />
+            <img src="/public/agents/baimo/Bai Mo Capacity (2).png" loading="lazy" />
+            <img src="/public/agents/baimo/Bai Mo Core.png" loading="lazy" />
+            <img src="/public/agents/baimo/Bai Mo Firing.png" loading="lazy" />
+            <img src="/public/agents/baimo/Bai Mo Active Upgrade.png" loading="lazy" />
+            <img src="/public/agents/baimo/Bai Mo Passive Upgrade.png" loading="lazy" />
+            <img src="/public/shared/Armor.png" loading="lazy" />
+            <img src="/public/shared/Stringify.png" loading="lazy" />
+          </div>
+        </div>
       </div>
-      <div id="Bai Mo-UltimateSkill">
-        <h3>Ultimate Skill: Streetfighter</h3>
-        <img src="/public/agents/baimo/Bai Mo Ultimate Skill.webp" alt="Bai Mo UltimateSkill" />
-        <p>Type: Rebirth</p>
-        <p>
-          Bai Mo places a Beacon. If he's downed or killed, he can instantly respawn there. Pressing the ultimate skill
-          key again will teleport him to the Beacon at any time, fully restoring his HP.
-        </p>
-        <h4>Details</h4>
-        <ul>
-          <li>Cost: 6 Ultimate Points</li>
-          <li>Beacon HP: 100</li>
-          <li>Beacon Duration: 20 seconds</li>
-        </ul>
-        <h4>How to play</h4>
-        <video width="400" controls autoplay loop>
-          <source src="/public/agents/baimo/Bai Mo Ultimate Vid.mp4" />
-        </video>
-      </div>
     </div>
-    <hr />
-    <div id="Bai Mo-Weapon">
-      <h2>Weapon</h2>
-      <h3>Primary Gun: Freedom Reign</h3>
-      <img src="Bai_Mo_GrowthWeapon.png" />
-      <p></p>
-    </div>
-    <div id="Bai Mo-Upgrades">
-      <hr />
-      <h2>Upgrades</h2>
-      <img src="/public/agents/baimo/Bai Mo Accuracy.png" loading="lazy" />
-      <img src="/public/agents/baimo/Bai Mo Capacity (2).png" loading="lazy" />
-      <img src="/public/agents/baimo/Bai Mo Core.png" loading="lazy" />
-      <img src="/public/agents/baimo/Bai Mo Firing.png" loading="lazy" />
-      <img src="/public/agents/baimo/Bai Mo Active Upgrade.png" loading="lazy" />
-      <img src="/public/agents/baimo/Bai Mo Passive Upgrade.png" loading="lazy" />
-      <img src="/public/shared/Armor.png" loading="lazy" />
-      <img src="/public/shared/Stringify.png" loading="lazy" />
-    </div>
-    <footer>
-      <span>henryphanisthebest@gmail.com</span>
-      <span>©2025 - 2030IDS/KSH. ALL RIGHTS RESERVED.</span>
-    </footer>
+
+    <script src="../all-agent.js"></script>
   </body>
 </html>
+
