--- a/src/app/agents/routes/Flavia.html
+++ b/src/app/agents/routes/Flavia.html
@@ -6,115 +6,172 @@
     <title>Flavia | Strinova Fan Page</title>
     <link rel="icon" href="/public/facion.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="/src/app/globals.css" />
+    <link rel="stylesheet" type="text/css" href="../pus-agent.css" />
   </head>
   <body>
     <nav class="navbar">
       <div class="main"><a href="/src/app/index.html">STRINOVA</a></div>
       <div class="sub">
-        <div><a href="/src/app/agents/page.html">Agents</a></div>
-        <div><a href="/src/app/maps/page.html">Maps</a></div>
-        <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
+        <a href="/src/app/agents/page.html">AGENTS</a>
+        <a href="/src/app/maps/page.html">MAPS</a>
+        <a href="/src/app/mechanics/page.html">MECHANICS</a>
       </div>
     </nav>
-    <div id="Flavia">
-      <img src="/public/agents/flavia/Flavia.webp" alt="Flavia" width="400" />
-      <h1>Flavia</h1>
-      <h3>Role: Duelist</h3>
-      <h2>Background</h2>
-      <p>
-        Flavia is a P.U.S special agent tasked with monitoring the organization's enemies. She moves with the grace of a
-        butterfly to confuse her foes and employs the strategic mind of a chess player.
-      </p>
-    </div>
-    <hr />
-    <div id="Flavia-Skills">
-      <h2>Skills</h2>
-      <div id="Flavia-ActiveSkill">
-        <h3>Active Skill: Phantom Mirage</h3>
-        <img src="/public/agents/flavia/Flavia Ultimate Skill.webp" alt="Flavia ActiveSkill" />
-        <p>Type: Weaken</p>
-        <p>
-          Flavia summons an ephemeral butterfly follower, which gains temporary invincibility and generates a Phantom
-          Orb upon taking damage. The Phantom Orb blocks enemy vision and can be destroyed.
-        </p>
-        <h4>Details</h4>
-        <ul>
-          <li>Phantom Orb HP: 100</li>
-          <li>Cast time: 0.5</li>
-          <li>Phantom Orb duration: 3</li>
-          <li>Buff duration: 5</li>
-          <li>Cooldown: 25</li>
-          <li>Transformation can be ended early by pressing Active Skill button</li>
-          <li>Transformation can not be cancelled before Phantom Orb fully appeared</li>
-        </ul>
-        <h4>How to play</h4>
-        <video width="400" controls autoplay loop>
-          <source src="/public/agents/flavia/Flavia Active Skill Vid.mp4" type="video/mp4" />
-        </video>
+
+    <div class="agent">
+      <div class="agent-image-container">
+        <img class="agent-symbol" src="/public/bg/pus-symbol.png" width="500" />
+        <img class="agent-image" src="/public/agents/flavia/Flavia.webp" alt="Michele" width="500" />
       </div>
-      <div id="Flavia-PassiveSkill">
-        <h3>Passive Skill: Retribution</h3>
-        <img src="/public/agents/flavia/Flavia Passive Skill.webp" alt="Flavia PassiveSkill" />
-        <p>Type: Enhance</p>
-        <p>
-          Damage taken reduces Flavia's active skill's cooldown. Taking a lot of damage grants her temporary ultimate
-          points, which must be spent in the current round.
-        </p>
-        <h4>Details</h4>
-        <ul>
-          <li>Selfdamage doesn't trigger passive effect</li>
-          <li>requires 200 damage to the character per temporary ult point, damage to orbs don't count</li>
-        </ul>
-        <h4>How to play</h4>
-        <video width="400" controls autoplay loop>
-          <source src="/public/agents/flavia/Flavia Passive Skill Vid.mp4" />
-        </video>
+      <div class="main-stuff">
+        <h1 class="title">FLAVIA</h1>
+        <img class="emoji" src="/public/emojis/flavia-wallpaper.webp">
+        <div class="subtitles">
+          <p data-role="about">ABOUT </p>
+          <p data-role="skills">SKILLS </p>
+          <p data-role="weapons">WEAPONS </p>
+          <p data-role="upgrades">UPGRADES </p>
+        </div>
+        <div>
+          <div id="about">
+            <h3>Role: Duelist</h3>
+            <p>
+              Flavia is a P.U.S special agent tasked with monitoring the organization's enemies. She moves with the grace of a
+             butterfly to confuse her foes and employs the strategic mind of a chess player.
+            </p>
+          </div>
+          <div id="skills" class="skills">
+            <div class="skill-images">
+              <img
+                src="/public/agents/flavia/Flavia Active Skill.webp"
+                data-role="active-skill"
+                alt="flavia ActiveSkill"
+              />
+              <img
+                src="/public/agents/flavia/Flavia Passive Skill.webp"
+                data-role="passive-skill"
+                alt="flavia PassiveSkill"
+              />
+              <img
+                src="/public/agents/flavia/Flavia Passive Skill.webp"
+                data-role="ultimate-skill"
+                alt="falvia UltimateSkill"
+              />
+            </div>
+            <div class="skill-title">
+              <p data-role="about">ABOUT</p>
+              <p data-role="details">DETAILS</p>
+              <p data-role="video">VIDEO</p>
+            </div>
+            <div>
+              <div id="active-skill">
+                <div id="about">
+                  <div class="active-about" data-role="about-skill">
+                    <h3 class="skill-name">Phantom Mirage</h3>
+                    <p>Type: Weaken</p>
+                    <p>
+                      Flavia summons an ephemeral butterfly follower, which gains temporary invincibility and generates a Phantom
+                      Orb upon taking damage. The Phantom Orb blocks enemy vision and can be destroyed. 
+                    </p>
+                  </div>
+                </div>
+                <div id="details">
+                  <h3 class="skill-name">Phantom Mirage</h3>
+                  <h4>Details</h4>
+                  <ul>
+                    <li>Phantom Orb HP: 100</li>
+                    <li>Cast time: 0.5</li>
+                    <li>Phantom Orb duration: 3</li>
+                    <li>Buff duration: 5</li>
+                    <li>Cooldown: 25</li>
+                    <li>Transformation can be ended early by pressing Active Skill button</li>
+                    <li>Transformation can not be cancelled before Phantom Orb fully appeared</li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <h3 class="skill-name">Phantom Mirage</h3>
+                  <video width="400" controls loop>
+                    <source src="/public/agents/flavia/Flavia Active Skill Vid.mp4" />
+                  </video>
+                </div>
+              </div>
+              <div id="passive-skill">
+                <div id="about">
+                  <h3 class="skill-name" >Retribution</h3>
+                  <p>Type: Enhance</p>
+                  <p>
+                    Damage taken reduces Flavia's active skill's cooldown. Taking a lot of damage grants her temporary ultimate
+                   points, which must be spent in the current round.
+                  </p>
+                </div>
+                <div id="details">
+                  <h3 class="skill-name" >Retribution</h3>
+                  <h4>Details</h4>
+                  <ul>
+                    <li>Self damage doesn't trigger passive effect</li>
+                    <li>requires 200 damage to the character per temporary ult point, damage to orbs don't count</li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <h3 class="skill-name" >Retribution</h3>
+                  <video width="400" controls loop>
+                    <source src="/public/agents/flavia/Flavia Passive Skill Vid.mp4" />
+                  </video>
+                </div>
+              </div>
+              <div id="ultimate-skill">
+                <div id="about">
+                  <h3 class="skill-name">Phantom Flutter</h3>
+                  <p>Type: Rebirth</p>
+                  <p>
+                    Flavia generates a Phantom Zone at her location, allowing her to transform into a butterfly for a brief
+                    duration after receiving an otherwise lethal blow from an enemy within the zone. Attacks from outside the zone
+                    will not trigger this effect. Flavia can only reveal herself to enemies outside the zone by attacking.
+                  </p>
+                </div>
+                <div id="details">
+                  <h3 class="skill-name">Phantom Flutter</h3>
+                  <h4>Details</h4>
+                  <ul>
+                    <li>Cost: 7 Ultimate Points</li>
+                    <li>Cast time: 1</li>
+                    <li>Duration: 10</li>
+                    <li>Transformation healing: 100</li>
+                    <li>Leaving Phantom Zone area ends skill effect early</li>
+                    <li>Transformation effect remain after ultimate ends</li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <h3 class="skill-name">Phantom Flutter</h3>
+                  <video width="400" controls loop>
+                    <source src="/public/agents/flavia/Flavia Ultimate Skill Vid.mp4" />
+                  </video>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="weapons" data-role="weapon">
+            <h3>Primary Gun: Solo</h3>
+            <img src="/public/agents/flavia/Flavia Gun.webp" />
+            <p>
+              A light-weight submachine gun with an unusually high rate of fire and precision compared to most other weapons in its class. Equipped with a 1.25x scope.
+            </p>
+          </div>
+          <div id="upgrades" data-role="upgrades">
+            <h2>Upgrades</h2>
+            <img src="/public/shared/Firing.png" loading="lazy" />
+            <img src="/public/shared/Accuracy.png" loading="lazy" />
+            <img src="/public/shared/Critical Hit.png" loading="lazy" />
+            <img src="/public/shared/Capacity.png" loading="lazy" />
+            <img src="/public/agents/flavia/Flavia Active Upgrade.png" loading="lazy" />
+            <img src="/public/agents/flavia/Flavia Passive Upgrade.png" loading="lazy" />
+            <img src="/public/shared/Armor.png" loading="lazy" />
+            <img src="/public/shared/Stringify.png" loading="lazy" />
+          </div>
+        </div>
       </div>
-      <div id="Flavia-UltimateSkill">
-        <h3>Ultimate Skill: Retribution</h3>
-        <img src="/public/agents/flavia/Flavia Ultimate Skill.webp" alt="Flavia UltimateSkill" />
-        <p>Type: Rebirth</p>
-        <p>
-          Flavia generates a Phantom Zone at her location, allowing her to transform into a butterfly for a brief
-          duration after receiving an otherwise lethal blow from an enemy within the zone. Attacks from outside the zone
-          will not trigger this effect. Flavia can only reveal herself to enemies outside the zone by attacking.
-        </p>
-        <h4>Details</h4>
-        <ul>
-          <li>Cost: 7 Ultimate Points</li>
-          <li>Cast time: 1</li>
-          <li>Duration: 10</li>
-          <li>Transformation healing: 100</li>
-          <li>Leaving Phantom Zone area ends skill effect early</li>
-          <li>Transformation effect remain after ultimate ends</li>
-        </ul>
-        <h4>How to play</h4>
-        <video width="400" controls autoplay loop>
-          <source src="/public/agents/flavia/Flavia Ultimate Skill Vid.mp4" />
-        </video>
-      </div>
     </div>
-    <hr />
-    <div id="Flavia-Weapon">
-      <h2>Weapon</h2>
-      <h3>Primary Gun: Solo</h3>
-      <img src="/public/agents/flavia/Flavia Gun.webp" />
-    </div>
-    <div id="Flavia-Upgrades">
-      <hr />
-      <h2>Upgrades</h2>
-      <img src="/public/shared/Firing.png" loading="lazy" />
-      <img src="/public/shared/Accuracy.png" loading="lazy" />
-      <img src="/public/shared/Critical Hit.png" loading="lazy" />
-      <img src="Capacity.png" loading="lazy" />
-      <img src="/public/agents/flavia/Flavia Active Upgrade.png" loading="lazy" />
-      <img src="/public/agents/flavia/Flavia Passive Upgrade.png" loading="lazy" />
-      <img src="/public/shared/Armor.png" loading="lazy" />
-      <img src="/public/shared/Stringify.png" loading="lazy" />
-    </div>
-    <footer>
-      <span>henryphanisthebest@gmail.com</span>
-      <span>©2025 - 2030IDS/KSH. ALL RIGHTS RESERVED.</span>
-    </footer>
+
+    <script src="../all-agent.js"></script>
   </body>
 </html>
