--- a/src/app/agents/routes/Kanami.html
+++ b/src/app/agents/routes/Kanami.html
@@ -6,114 +6,173 @@
     <title>Kanami | Strinova Fan Page</title>
     <link rel="icon" href="/public/facion.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="/src/app/globals.css" />
+    <link rel="stylesheet" type="text/css" href="../pus-agent.css" />
   </head>
   <body>
     <nav class="navbar">
       <div class="main"><a href="/src/app/index.html">STRINOVA</a></div>
       <div class="sub">
-        <div><a href="/src/app/agents/page.html">Agents</a></div>
-        <div><a href="/src/app/maps/page.html">Maps</a></div>
-        <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
+        <a href="/src/app/agents/page.html">AGENTS</a>
+        <a href="/src/app/maps/page.html">MAPS</a>
+        <a href="/src/app/mechanics/page.html">MECHANICS</a>
       </div>
     </nav>
-    <div id="Kanami">
-      <img src="/public/agents/kanami/OMG KANAMI I LOVE KANAMI SO MUCH PLEASE MARRY ME.webp" alt="Kanami" width="400" />
-      <h1>Kanami</h1>
-      <h3>Role:</h3>
-      <h2>Background</h2>
-      <p>
-        A Strinova idol that secretly works for the Scissors. Singing to her hearts content for the future of Strinova
-      </p>
-    </div>
-    <hr />
-    <div id="Kanami-Skills">
-      <h2>Skills</h2>
-      <div id="Kanami-ActiveSkill">
-        <h3>Active Skill: Echo Chamber</h3>
-        <img src="/public/agents/kanami/Kanami Active Skill.webp" alt="Kanami ActiveSkill" />
-        <p>Type: Detect</p>
-        <p>
-          Kanami's next shot fires a Sonar Disk that scans at a 180° for unobstructed enemies. Detected enemies are
-          revealed to all allies
-        </p>
-        <h4>Details</h4>
-        <ul>
-          <li>Hp: 100</li>
-          <li>Duration: 10 Seconds</li>
-          <li>Does no damage</li>
-          <li>
-            Revealed Duration: infinite if iniside the radius, but 2 seconds when destroyed or enemies left the radius
-          </li>
-          <li>
-            Echo Chanmber will always hit at the center of the crosshair. It isnt affected by any type of inaccuracies.
-          </li>
-        </ul>
-        <h4>How to play</h4>
-        <video width="400" controls autoplay loop>
-          <source src="/public/agents/kanami/Kanami Active Skill.mp4" />
-        </video>
+
+    <div class="agent">
+      <div class="agent-image-container">
+        <img class="agent-symbol" src="/public/bg/scissors-symbol.png" width="500" />
+        <img class="agent-image" src="/public/agents/kanami/OMG KANAMI I LOVE KANAMI SO MUCH PLEASE MARRY ME.webp" alt="Michele" width="500" />
       </div>
-      <div id="Kanami-PassiveSkill">
-        <h3>Passive Skill: Echo Reveal</h3>
-        <img src="/public/agents/kanami/Kanami Passive Skill.webp" alt="Kanami PassiveSkill" />
-        <p>Type: Detect</p>
-        <p>Kanami's shots generate a sonar zone at the impact point that detects all enemies inside of it.</p>
-        <h4>Details</h4>
-        <ul>
-          <li>Radius: 4 meters and height of 10 meters (5 meters up and 5 meters down)</li>
-        </ul>
-        <h4>How to play</h4>
-        <video width="400" controls autoplay loop>
-          <source src="/public/agents/kanami/Kanami Passive Skill.mp4" />
-        </video>
+      <div class="main-stuff">
+        <h1 class="title">KANAMI</h1>
+        <img class="emoji" src="/public/emojis/kanami-emoji-3.webp">
+        <div class="subtitles">
+          <p data-role="about">ABOUT </p>
+          <p data-role="skills">SKILLS </p>
+          <p data-role="weapons">WEAPONS </p>
+          <p data-role="upgrades">UPGRADES </p>
+        </div>
+        <div>
+          <div id="about">
+            <h3>Role: Vanguard</h3>
+            <p>
+              A Strinova idol that secretly works for the Scissors. Singing to her hearts content for the future of Strinova
+            </p>
+          </div>
+          <div id="skills" class="skills">
+            <div class="skill-images">
+              <img
+                src="/public/agents/kanami/Kanami Active Skill.webp"
+                data-role="active-skill"
+                alt="kanami ActiveSkill"
+              />
+              <img
+                src="/public/agents/kanami/Kanami Passive Skill.webp"
+                data-role="passive-skill"
+                alt="kanami PassiveSkill"
+              />
+              <img
+                src="/public/agents/kanami/Kanami Ultimate Skill.webp"
+                data-role="ultimate-skill"
+                alt="kanami UltimateSkill"
+              />
+            </div>
+            <div class="skill-title">
+              <p data-role="about">ABOUT</p>
+              <p data-role="details">DETAILS</p>
+              <p data-role="video">VIDEO</p>
+            </div>
+            <div>
+              <div id="active-skill">
+                <div id="about">
+                  <div class="active-about" data-role="about-skill">
+                    <h3 class="skill-name">Echo Chamber</h3>
+                    <p>Type: Detect</p>
+                    <p>
+                      Kanami's next shot fires a Sonar Disk that scans at a 180° for unobstructed enemies. Detected enemies are
+                      revealed to all allies
+                    </p>
+                  </div>
+                </div>
+                <div id="details">
+                  <h3 class="skill-name">Echo Chamber</h3>
+                  <h4>Details</h4>
+                  <ul>
+                    <li>Hp: 100</li>
+                    <li>Duration: 10 Seconds</li>
+                    <li>Does no damage</li>
+                    <li>
+                      Revealed Duration: infinite if iniside the radius, but 2 seconds when destroyed or enemies left the radius
+                    </li>
+                    <li>
+                      Echo Chanmber will always hit at the center of the crosshair. It isnt affected by any type of inaccuracies.
+                    </li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <h3 class="skill-name">Echo Chamber</h3>
+                  <video width="400" controls loop>
+                    <source src="/public/agents/kanami/Kanami Active Skill.mp4" />
+                  </video>
+                </div>
+              </div>
+              <div id="passive-skill">
+                <div id="about">
+                  <h3 class="skill-name" >Echo Reveal</h3>
+                  <p>Type: Detect</p>
+                  <p>
+                    Kanami's shots generate a sonar zone at the impact point that detects all enemies inside of it.
+                  </p>
+                </div>
+                <div id="details">
+                  <h3 class="skill-name" >Echo Reveal</h3>
+                  <h4>Details</h4>
+                  <ul>
+                    <li>Radius: 4 meters and height of 10 meters (5 meters up and 5 meters down)</li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <h3 class="skill-name" >Echo Reveal</h3>
+                  <video width="400" controls loop>
+                    <source src="/public/agents/kanami/Kanami Passive Skill.mp4" />
+                  </video>
+                </div>
+              </div>
+              <div id="ultimate-skill">
+                <div id="about">
+                  <h3 class="skill-name">Showtime</h3>
+                  <p>Type: Weaken</p>
+                  <p>
+                    Kanami summons her holographic figure that pulls in enemies within a certain range, reducing their movement
+                    speed and accuracy.
+                  </p>
+                </div>
+                <div id="details">
+                  <h3 class="skill-name">Showtime</h3>
+                  <h4>Details</h4>
+                  <ul>
+                    <li>Cost: 6 Ultimate Points</li>
+                    <li>Duration: 10 Seconds</li>
+                    <li>Summoned Range: 40 Meters</li>
+                    <li>Affect Range: 20 meters</li>
+                    <li>Cant be destroyed</li>
+                    <li>effects ignore line of sight</li>
+                    <li>Stunned: 2 Seconds</li>
+                    <li>Slowed and reduced accuracy when inside its range</li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <h3 class="skill-name">Showtime</h3>
+                  <video width="400" controls loop>
+                    <source src="/public/agents/kanami/Kanami Ultimate Skill.mp4" />
+                  </video>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="weapons" data-role="weapon">
+            <h3>Primary Gun: Finale</h3>
+            <img src="/public/agents/kanami/Kanami Gun Finale.webp" />
+            <p>
+              Utilizing a short-recoil barrel system and semi-automatic firing, the anti-material sniper rifle delivers astounding power. Equipped with a 2.5x scope.
+            </p>
+          </div>
+          <div id="upgrades" data-role="upgrades">  
+            <h2>Upgrades</h2>
+            <img src="/public/shared/Sniper capacity.png" loading="lazy" />
+            <img src="/public/shared/Sniper Firing.png" loading="lazy" />
+            <img src="/public/shared/Sniper Function.png" loading="lazy" />
+            <img src="/public/shared/Snipper Core.png" loading="lazy" />
+            <img src="/public/agents/kanami/Kanami Active Upgrade.png" loading="lazy" />
+            <img src="/public/agents/kanami/Kanami Passive Upgrade.png" loading="lazy" />
+            <img src="/public/shared/Armor.png" loading="lazy" />
+            <img src="/public/shared/Stringify.png" loading="lazy" />
+          </div>
+        </div>
       </div>
-      <div id="Kanami-UltimateSkill">
-        <h3>Ultimate Skill: Showtime</h3>
-        <img src="/public/agents/kanami/Kanami Ultimate Skill.webp" alt="Kanami UltimateSkill" />
-        <p>Type: Weaken</p>
-        <p>
-          Kanami summons her holographic figure that pulls in enemies within a certain range, reducing their movement
-          speed and accuracy.
-        </p>
-        <h4>Details</h4>
-        <ul>
-          <li>Cost: 6 Ultimate Points</li>
-          <li>Duration: 10 Seconds</li>
-          <li>Summoned Range: 40 Meters</li>
-          <li>Affect Range: 20 meters</li>
-          <li>Cant be destroyed</li>
-          <li>effects ignore line of sight</li>
-          <li>Stunned: 2 Seconds</li>
-          <li>Slowed and reduced accuracy when inside its range</li>
-        </ul>
-        <h4>How to play</h4>
-        <video width="400" controls autoplay loop>
-          <source src="/public/agents/kanami/Kanami Ultimate Skill.mp4" />
-        </video>
-      </div>
     </div>
-    <hr />
-    <div id="Kanami-Weapon">
-      <h2>Weapon</h2>
-      <h3>Primary Gun: Fianle</h3>
-      <img src="/public/agents/kanami/Kanami Gun Finale.webp" />
-      <p></p>
-    </div>
-    <div id="Kanami-Upgrades">
-      <hr />
-      <h2>Upgrades</h2>
-      <img src="/public/shared/Sniper capacity.png" loading="lazy" />
-      <img src="/public/shared/Sniper Firing.png" loading="lazy" />
-      <img src="/public/shared/Sniper Function.png" loading="lazy" />
-      <img src="/public/shared/Snipper Core.png" loading="lazy" />
-      <img src="/public/agents/kanami/Kanami Active Upgrade.png" loading="lazy" />
-      <img src="/public/agents/kanami/Kanami Passive Upgrade.png" loading="lazy" />
-      <img src="/public/shared/Armor.png" loading="lazy" />
-      <img src="/public/shared/Stringify.png" loading="lazy" />
-    </div>
-    <footer>
-      <span>henryphanisthebest@gmail.com</span>
-      <span>©2025 - 2030IDS/KSH. ALL RIGHTS RESERVED.</span>
-    </footer>
+
+    <script src="../all-agent.js"></script>
   </body>
 </html>
+
