--- a/src/app/agents/routes/Meredith.html
+++ b/src/app/agents/routes/Meredith.html
@@ -6,103 +6,161 @@
     <title>Meredith | Strinova Fan Page</title>
     <link rel="icon" href="/public/facion.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="/src/app/globals.css" />
+    <link rel="stylesheet" type="text/css" href="../pus-agent.css" />
   </head>
   <body>
     <nav class="navbar">
       <div class="main"><a href="/src/app/index.html">STRINOVA</a></div>
       <div class="sub">
-        <div><a href="/src/app/agents/page.html">Agents</a></div>
-        <div><a href="/src/app/maps/page.html">Maps</a></div>
-        <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
+        <a href="/src/app/agents/page.html">AGENTS</a>
+        <a href="/src/app/maps/page.html">MAPS</a>
+        <a href="/src/app/mechanics/page.html">MECHANICS</a>
       </div>
     </nav>
-    <div id="Meredith">
-      <img src="/public/agents/meredith/Meredith.webp" alt="Meredith" width="400" />
-      <h1>Meredith</h1>
-      <h3>Role: Controller</h3>
-      <h2>Background</h2>
-      <p>
-        The secretive leader and co-founder of The Scissors, a deep thinker who is difficult to communicate with in an
-        ordinary manner.
-      </p>
-    </div>
-    <hr />
-    <div id="Meredith-Skills">
-      <h2>Skills</h2>
-      <div id="Meredith-ActiveSkill">
-        <h3>Active Skill: Sandstorm</h3>
-        <img src/public/agents/meredith/="Meredith Active Skill.webp" alt="Meredith ActiveSkill" />
-        <p>Type: Weaken</p>
-        <p>Meredith unleashes a String Ball, which lands with a sandstorm eruption</p>
-        <h4>Details</h4>
-        <ul>
-          <li>Reduces movement speed.</li>
-          <li>reduces tech power.</li>
-          <li>Reduced hp of those within.</li>
-        </ul>
-        <h4>How to play</h4>
-        <video width="400" controls autoplay loop>
-          <source src/public/agents/meredith/="Meredith Ultimate Skill.mp4" />
-        </video>
+
+    <div class="agent">
+      <div class="agent-image-container">
+        <img class="agent-symbol" src="/public/bg/scissors-symbol.png" width="500" />
+        <img class="agent-image" src="/public/agents/meredith/Meredith.webp" alt="Michele" width="500" />
       </div>
-      <div id="Meredith-PassiveSkill">
-        <h3>Passive Skill: Zeroth Rings</h3>
-        <img src/public/agents/meredith/="Meredith Passive Skill.webp" alt="Meredith PassiveSkill" />
-        <p>Type: Levitate</p>
-        <p>
-          Meredith's landing speed is greatly reduced when transitioning into a skill, weapon, or tactical aiming mode
-          from an airborne position.
-        </p>
-        <h4>Details</h4>
-        <ul>
-          <li>Duration: 10 Seconds</li>
-        </ul>
-        <h4>How to play</h4>
-        <video width="400" controls autoplay loop>
-          <source src/public/agents/meredith/="Meredith Passive Skill.mp4" />
-        </video>
+      <div class="main-stuff">
+        <h1 class="title">MEREDITH</h1>
+        <img class="emoji" src="/public/emojis/meredith-emoji.webp">
+        <div class="subtitles">
+          <p data-role="about">ABOUT </p>
+          <p data-role="skills">SKILLS </p>
+          <p data-role="weapons">WEAPONS </p>
+          <p data-role="upgrades">UPGRADES </p>
+        </div>
+        <div>
+          <div id="about">
+            <h3>Role: Controller</h3>
+            <p>
+              The secretive leader and co-founder of The Scissors, a deep thinker who is difficult to communicate with in an
+              ordinary manner.
+            </p>
+          </div>
+          <div id="skills" class="skills">
+            <div class="skill-images">
+              <img
+                src="/public/agents/meredith/Meredith Active Skill.webp"
+                data-role="active-skill"
+                alt="eika ActiveSkill"
+              />
+              <img
+                src="/public/agents/meredith/Meredith Passive Skill.webp"
+                data-role="passive-skill"
+                alt="eika PassiveSkill"
+              />
+              <img
+                src="/public/agents/meredith/Meredith Ultimate Skill.webp"
+                data-role="ultimate-skill"
+                alt="eiks UltimateSkill"
+              />
+            </div>
+            <div class="skill-title">
+              <p data-role="about">ABOUT</p>
+              <p data-role="details">DETAILS</p>
+              <p data-role="video">VIDEO</p>
+            </div>
+            <div>
+              <div id="active-skill">
+                <div id="about">
+                  <div class="active-about" data-role="about-skill">
+                    <h3 class="skill-name">Sandstorm</h3>
+                    <p>Type: Weaken</p>
+                    <p>
+                      Meredith unleashes a String Ball, which lands with a sandstorm eruption
+                    </p>
+                  </div>
+                </div>
+                <div id="details">
+                  <h3 class="skill-name">Sandstorm</h3>
+                  <h4>Details</h4>
+                  <ul>
+                    <li>Reduces movement speed.</li>
+                    <li>reduces tech power.</li>
+                    <li>Reduced hp of those within.</li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <h3 class="skill-name">Sandstorm</h3>
+                  <video width="400" controls loop>
+                    <source src="/public/agents/meredith/Meredith Active Skill.mp4" />
+                  </video>
+                </div>
+              </div>
+              <div id="passive-skill">
+                <div id="about">
+                  <h3 class="skill-name" >Zeroth Rings</h3>
+                  <p>Type: Levitate</p>
+                  <p>
+                    Meredith's landing speed is greatly reduced when transitioning into a skill, weapon, or tactical aiming mode
+                    from an airborne position.
+                  </p>
+                </div>
+                <div id="details">
+                  <h3 class="skill-name" >Zeroth Rings</h3>
+                  <h4>Details</h4>
+                  <ul>
+                    <li>Duration: 10 Seconds</li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <h3 class="skill-name" >Zeroth Rings</h3>
+                  <video width="400" controls loop>
+                    <source src="/public/agents/meredith/Meredith Passive Skill.mp4" />
+                  </video>
+                </div>
+              </div>
+              <div id="ultimate-skill">
+                <div id="about">
+                  <h3 class="skill-name">Sand Burial</h3>
+                  <p>Type: Weaken</p>
+                  <p>
+                    Meredith throws a sandstorm-summoning pyramid, obscuring vision within range and temporarily reducing enemies'
+                    HP.
+                  </p>
+                </div>
+                <div id="details">
+                  <h3 class="skill-name">Sand Burial</h3>
+                  <h4>Details</h4>
+                  <ul>
+                    <li>Cost: 7 Ultimate Point</li>
+                    <li>Meredith ultimate gets countered by nobunaga</li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <h3 class="skill-name">Sand Burial</h3>
+                  <video width="400" controls loop>
+                    <source src="/public/agents/meredith/Meredith Ultimate Skill.mp4" />
+                  </video>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="weapons" data-role="weapon">
+            <h3>Primary Gun: Falcon</h3>
+            <img src="/public/agents/meredith/Meredith Gun Falcon.webp" />
+            <p>
+              The standout bullpup rifle, known for its exceptional all-around performance. A classic from old Earth firearms. Equipped with a 1.25x scope.
+            </p>
+          </div>
+          <div id="upgrades" data-role="upgrades">  
+            <h2>Upgrades</h2>
+            <img src="/public/shared/Core.png" loading="lazy" />
+            <img src="/public/agents/meredith/Meredith Accuary.png" loading="lazy" />
+            <img src="/public/shared/Critical Hit.png" loading="lazy" />
+            <img src="/public/shared/Capacity.png" loading="lazy" />
+            <img src="/public/agents/meredith/Meredith Active Upgrade.png" loading="lazy" />
+            <img src="/public/agents/meredith/Meredith Passive Upgrade.png" loading="lazy" />
+            <img src="/public/shared/Armor.png" loading="lazy" />
+            <img src="/public/shared/Stringify.png" loading="lazy" />
+          </div>
+        </div>
       </div>
-      <div id="Meredith-UltimateSkill">
-        <h3>Ultimate Skill: Sand Burial</h3>
-        <img src/public/agents/meredith/="Meredith Ultimate Skill.webp" alt="Meredith UltimateSkill" />
-        <p>Type: Weaken</p>
-        <p>
-          Meredith throws a sandstorm-summoning pyramid, obscuring vision within range and temporarily reducing enemies'
-          HP.
-        </p>
-        <h4>Details</h4>
-        <ul>
-          <li>Cost: 7 Ultimate Point</li>
-          <li>Meredith ultimate gets countered by nobunaga</li>
-        </ul>
-        <h4>How to play</h4>
-        <video width="400" controls autoplay loop>
-          <source src/public/agents/meredith/="Meredith Ultimate Skill.mp4" />
-        </video>
-      </div>
     </div>
-    <hr />
-    <div id="Meredith-Weapon">
-      <h2>Weapon</h2>
-      <h3>Primary Gun: Falcon</h3>
-      <img src/public/agents/meredith/="Meredith Gun Falcon.webp" />
-      <p></p>
-    </div>
-    <div id="Meredith-Upgrades">
-      <hr />
-      <h2>Upgrades</h2>
-      <img src="Core.png" loading="lazy" />
-      <img src/public/agents/meredith/="Meredith Accuary.png" loading="lazy" />
-      <img src="/public/shared/Critical Hit.png" loading="lazy" />
-      <img src="Capacity.png" loading="lazy" />
-      <img src/public/agents/meredith/="Meredith Active Upgrade.png" loading="lazy" /> <img
-      src/public/agents/meredith/="Meredith Passive Upgrade.png" loading="lazy" />
-      <img src="/public/shared/Armor.png" loading="lazy" />
-      <img src="/public/shared/Stringify.png" loading="lazy" />
-    </div>
-    <footer>
-      <span>henryphanisthebest@gmail.com</span>
-      <span>©2025 - 2030IDS/KSH. ALL RIGHTS RESERVED.</span>
-    </footer>
+
+    <script src="../all-agent.js"></script>
   </body>
 </html>
