--- a/src/app/agents/routes/Ming.html
+++ b/src/app/agents/routes/Ming.html
@@ -6,107 +6,169 @@
     <title>Ming | Strinova Fan Page</title>
     <link rel="icon" href="/public/facion.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="/src/app/globals.css" />
+    <link rel="stylesheet" type="text/css" href="../pus-agent.css" />
   </head>
   <body>
     <nav class="navbar">
       <div class="main"><a href="/src/app/index.html">STRINOVA</a></div>
       <div class="sub">
-        <div><a href="/src/app/agents/page.html">Agents</a></div>
-        <div><a href="/src/app/maps/page.html">Maps</a></div>
-        <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
+        <a href="/src/app/agents/page.html">AGENTS</a>
+        <a href="/src/app/maps/page.html">MAPS</a>
+        <a href="/src/app/mechanics/page.html">MECHANICS</a>
       </div>
     </nav>
-    <div id="Ming">
-      <img src="/public/agents/ming/Ming.webp" alt="Ming" width="400" />
-      <h1>Ming</h1>
-      <h3>Role: Duelist</h3>
-      <h2>Background</h2>
-      <p>
-        The vice-captain of The Scissors' strike team, a valiant warrior, now one of The Scissors' spiritual leaders.
-        She's equipped with an electromagnetic arm capable of manipulating electric currents to perform a variety of
-        attacks
-      </p>
-    </div>
-    <hr />
-    <div id="Ming-Skills">
-      <h2>Skills</h2>
-      <div id="Ming-ActiveSkill">
-        <h3>Active Skill:</h3>
-        <img src= "/public/agents/ming/" class="Ming Active Skill.webp" alt="Ming ActiveSkill" />
-        <p>Type: Damage</p>
-        <p>
-          Ming fires an anti-armor lightning orb that explodes upon reaching its maximum distance, collision with an
-          enemy Superstring, or when the skill is recast, leaving behind a magnetic field that slows all enemy units
-          (including summons) and damages their armor. Ming gains movement speed within the field.
-        </p>
-        <h4>Details</h4>
-        <ul>
-          <li>Cooldown: 25</li>
-          <li>Duration: 3</li>
-          <li>Cast Range: 8 - 60</li>
-          <li>Orb Radius: 5</li>
-          <li>Damage: 20 + 20/sec</li>
-        </ul>
-        <h4>How to play</h4>
-        <video width="400" controls autoplay loop><source src/public/agents/ming/="Ming Active Vid.mp4" /></video>
+
+    <div class="agent">
+      <div class="agent-image-container">
+        <img class="agent-symbol" src="/public/bg/scissors-symbol.png" width="500" />
+        <img class="agent-image" src="/public/agents/ming/Ming.webp" alt="Michele" width="500" />
       </div>
-      <div id="Ming-PassiveSkill">
-        <h3>Passive Skill:</h3>
-        <img src/public/agents/ming/="Ming Passive Skill.webp" alt="Ming PassiveSkill" />
-        <p>Type: Armor</p>
-        <p>
-          Damage from Ming's firearm or active skill against enemy armor or shields automatically regenerates Ming's
-          armor. This passive will also regenerate temporary armor faster during Ming's ultimate.
-        </p>
-        <h4>Details</h4>
-        <ul>
-          <li>Armor Damage Amplification: 10%.</li>
-          <li>Lifesteal: 20%(30% with upgrade)</li>
-          <li>Ultimate Lifesteal: 40%</li>
-          <li>Effectiveness decreased to 10% when damaging summons(does not affect ultimate).</li>
-        </ul>
-        <h4>How to play</h4>
-        <video width="400" controls autoplay loop><source src/public/agents/ming/="Ming Passive Vid.mp4" /></video>
+      <div class="main-stuff">
+        <h1 class="title">MING</h1>
+        <img class="emoji" src="/public/emojis/ming-emoji.webp">
+        <div class="subtitles">
+          <p data-role="about">ABOUT </p>
+          <p data-role="skills">SKILLS </p>
+          <p data-role="weapons">WEAPONS </p>
+          <p data-role="upgrades">UPGRADES </p>
+        </div>
+        <div>
+          <div id="about">
+            <h3>Role: Duelist</h3>
+            <p>
+              The vice-captain of The Scissors' strike team, a valiant warrior, now one of The Scissors' spiritual leaders.
+              She's equipped with an electromagnetic arm capable of manipulating electric currents to perform a variety of
+              attacks
+            </p>
+          </div>
+          <div id="skills" class="skills">
+            <div class="skill-images">
+              <img
+                src="/public/agents/ming/Ming Active Skill.webp"
+                data-role="active-skill"
+                alt="bai-mo ActiveSkill"
+              />
+              <img
+                src="/public/agents/ming/Ming Passive Skill.webp"
+                data-role="passive-skill"
+                alt="bai-mo PassiveSkill"
+              />
+              <img
+                src="/public/agents/ming/Ming Ultimate Skill.webp"
+                data-role="ultimate-skill"
+                alt="bai-mo UltimateSkill"
+              />
+            </div>
+            <div class="skill-title">
+              <p data-role="about">ABOUT</p>
+              <p data-role="details">DETAILS</p>
+              <p data-role="video">VIDEO</p>
+            </div>
+            <div>
+              <div id="active-skill">
+                <div id="about">
+                  <div class="active-about" data-role="about-skill">
+                    <h3 class="skill-name">Sunder Blast</h3>
+                    <p>Type: Damage</p>
+                    <p>
+                      Ming fires an anti-armor lightning orb that explodes upon reaching its maximum distance, collision with an
+                      enemy Superstring, or when the skill is recast, leaving behind a magnetic field that slows all enemy units
+                      (including summons) and damages their armor. Ming gains movement speed within the field.
+                    </p>
+                  </div>
+                </div>
+                <div id="details">
+                  <h3 class="skill-name">Sunder Blast</h3>
+                  <h4>Details</h4>
+                  <ul>
+                    <li>Cooldown: 25</li>
+                    <li>Duration: 3</li>
+                    <li>Cast Range: 8 - 60</li>
+                    <li>Orb Radius: 5</li>
+                    <li>Damage: 20 + 20/sec</li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <h3 class="skill-name">Sunder Blast</h3>
+                  <video width="400" controls loop>
+                    <source src="/public/agents/ming/Ming Active Vid.mp4" />
+                  </video>
+                </div>
+              </div>
+              <div id="passive-skill">
+                <div id="about">
+                  <h3 class="skill-name" >Aegis Absorb</h3>
+                  <p>Type: Armor</p>
+                  <p>
+                    Damage from Ming's firearm or active skill against enemy armor or shields automatically regenerates Ming's
+                    armor. This passive will also regenerate temporary armor faster during Ming's ultimate.
+                  </p>
+                </div>
+                <div id="details">
+                  <h3 class="skill-name" >Aegis Absorb</h3>
+                  <h4>Details</h4>
+                  <ul>
+                    <li>Armor Damage Amplification: 10%.</li>
+                    <li>Lifesteal: 20%(30% with upgrade)</li>
+                    <li>Ultimate Lifesteal: 40%</li>
+                    <li>Effectiveness decreased to 10% when damaging summons(does not affect ultimate).</li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <h3 class="skill-name" >Aegis Absorb</h3>
+                  <video width="400" controls loop>
+                    <source src="/public/agents/ming/Ming Passive Vid.mp4" />
+                  </video>
+                </div>
+              </div>
+              <div id="ultimate-skill">
+                <div id="about">
+                  <h3 class="skill-name">Shield Surge</h3>
+                  <p>Type: Enchance</p>
+                  <p>
+                    Ming's shots apply a stackable slowing debuff while she gains additional temporary armor. Damage from Ming's
+                    firearm or active skill against enemy armor extends the duration of the skill and regenerates temporary armor.
+                  </p>
+                </div>
+                <div id="details">
+                  <h3 class="skill-name">Shield Surge</h3>
+                  <h4>Details</h4>
+                  <ul>
+                    <li>Cost: 6 Ultimate Points</li>
+                    <li>Bonus Armor: 100</li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <h3 class="skill-name">Shield Surge</h3>
+                  <video width="400" controls loop>
+                    <source src="/public/agents/ming/Ming Ultimate Vid.mp4" />
+                  </video>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="weapons" data-role="weapon">
+            <h3>Primary Gun: RebelFlame</h3>
+            <img src="/public/agents/ming/Ming's Gun RebelFlame.webp" />
+            <p>
+              This high-performance, weather-resistant assault rifle delivers powerful firepower and unbeatable value. Equipped with a 1.25x scope.
+            </p>
+          </div>
+          <div id="upgrades" data-role="upgrades">  
+            <h2>Upgrades</h2>
+            <img src="/public/shared/Firing.png" loading="lazy" />
+            <img src="/public/shared/Accuracy.png" loading="lazy" />
+            <img src="/public/shared/Critical Hit.png" loading="lazy" />
+            <img src="/public/shared/Capacity.png" loading="lazy" />
+            <img src="/public/agents/ming/Ming Active Upgrade.png" class="Ming Active Upgrade.png" loading="lazy" /> 
+            <img src="/public/agents/ming/Ming Passive Upgrade.png" class="Ming Passive Upgrade.png" loading="lazy" />
+            <img src="/public/shared/Armor.png" loading="lazy" />
+            <img src="/public/shared/Stringify.png" loading="lazy" />
+          </div>
+        </div>
       </div>
-      <div id="Ming-UltimateSkill">
-        <h3>Ultimate Skill:</h3>
-        <img src/public/agents/ming/="Ming Ultimate Skill.webp" alt="Ming UltimateSkill" />
-        <p>Type: Enchanced</p>
-        <p>
-          Ming's shots apply a stackable slowing debuff while she gains additional temporary armor. Damage from Ming's
-          firearm or active skill against enemy armor extends the duration of the skill and regenerates temporary armor.
-        </p>
-        <h4>Details</h4>
-        <ul>
-          <li>Cost: 6 Ultimate Points</li>
-          <li>Bonus Armor: 100</li>
-        </ul>
-        <h4>How to play</h4>
-        <video width="400" controls autoplay loop><source src/public/agents/ming/="Ming Ultimate Vid.mp4" /></video>
-      </div>
     </div>
-    <hr />
-    <div id="Ming-Weapon">
-      <h2>Weapon</h2>
-      <h3>Primary Gun: RebelFlame</h3>
-      <img src="/public/agents/ming/Ming's Gun RebelFlame.webp" />
-      <p></p>
-    </div>
-    <div id="Ming-Upgrades">
-      <hr />
-      <h2>Upgrades</h2>
-      <img src="/public/shared/Firing.png" loading="lazy" />
-      <img src="/public/shared/Accuracy.png" loading="lazy" />
-      <img src="/public/shared/Critical Hit.png" loading="lazy" />
-      <img src="/public/shared/Capacity.png" loading="lazy" />
-      <img src="/public/agents/ming/Ming Active Upgrade.png" class="Ming Active Upgrade.png" loading="lazy" /> 
-      <img src="/public/agents/ming/Ming Passive Upgrade.png" class="Ming Passive Upgrade.png" loading="lazy" />
-      <img src="/public/shared/Armor.png" loading="lazy" />
-      <img src="/public/shared/Stringify.png" loading="lazy" />
-    </div>
-    <footer>
-      <span>henryphanisthebest@gmail.com</span>
-      <span>©2025 - 2030IDS/KSH. ALL RIGHTS RESERVED.</span>
-    </footer>
+
+    <script src="../all-agent.js"></script>
   </body>
 </html>
