--- a/src/app/agents/routes/Nobunaga.html
+++ b/src/app/agents/routes/Nobunaga.html
@@ -6,102 +6,167 @@
     <title>Nobunaga | Strinova Fan Page</title>
     <link rel="icon" href="/public/facion.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="/src/app/globals.css" />
+    <link rel="stylesheet" type="text/css" href="../pus-agent.css" />
   </head>
   <body>
     <nav class="navbar">
       <div class="main"><a href="/src/app/index.html">STRINOVA</a></div>
       <div class="sub">
-        <div><a href="/src/app/agents/page.html">Agents</a></div>
-        <div><a href="/src/app/maps/page.html">Maps</a></div>
-        <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
+        <a href="/src/app/agents/page.html">AGENTS</a>
+        <a href="/src/app/maps/page.html">MAPS</a>
+        <a href="/src/app/mechanics/page.html">MECHANICS</a>
       </div>
     </nav>
-    <div id="Nobunaga-Description">
-      <img src="/public/agents/nobunaga/NOBUNAGA.webp" alt="Nobunaga" width="400" />
-      <h1>Nobunaga</h1>
-      <h3>Role: Senitinel</h3>
-      <h2>Background</h2>
-      <p>
-        Leading the First investigation Squad of P.U.S is Captain Nobunaga. Haunted by the betreyal of his own brother,
-        Reichii, Nobunaga's pursuit of truth is relentless and exhaustive.
-      </p>
-    </div>
-    <div id="Nobunaga Skills">
-      <h2>Skills</h2>
-      <div id="Nobunaga-ActiveSkill">
-        <h3>Active Skill: Guardian Eye</h3>
-        <img src="/public/agents/nobunaga/Nobunaga Active Skill.webp" alt="Nobunaga ActiveSkill" />
-        <p>Type: enchanced</p>
-        <p>
-          Nobunaga can deploy up to 2 Guardian Eyes. While near a deployed Guardian Eye, he benefits from increased fire
-          rate, better weapon usability, and armor regeneration. The bonuses are amplified when two Guardian Eyes are
-          connected.
-        </p>
-        <h4>Details</h4>
-        <ul>
-          <li>The guardian eye has a cooldown of 20 seconds and a AoE radius of 10.</li>
-          <li>The effects of the guardian eye only works on Nobunaga</li>
-          <li>Effect is stackable but the ability enchancement can't be stacked</li>
-          <li>The cooldown will start once a Guardian Eye is recycled</li>
-        </ul>
-        <h4>How to play</h4>
-        <video width="400" controls autoplay loop>
-          <source src="/public/agents/nobunaga/Nobunaga Active Vid.mp4" />
-        </video>
+
+    <div class="agent">
+      <div class="agent-image-container">
+        <img class="agent-symbol" src="/public/bg/pus-symbol.png" width="500" />
+        <img class="agent-image" src="/public/agents/nobunaga/NOBUNAGA.webp" alt="Michele" width="500" />
       </div>
-      <div id="Nobunaga-PassiveSkill">
-        <h3>Passive Skill: Blinding Shot</h3>
-        <img src="/public/agents/nobunaga/Nobunaga Passive Skill.webp" alt="Nobunaga PassiveSkill" />
-        <p>Type: Weaken</p>
-        <p>
-          When Nobunaga can charge up her shots when shooting in ads. These fully charged shots cause enemies to have
-          increase shoulder fire spread and lose their crosshairs with reduced accuracy in ads mode.
-        </p>
-        <h4>How to play</h4>
-        <video width="400" controls autoplay loop>
-          <source src="/public/agents/nobunaga/Nobunaga Passive Vid.mp4" />
-        </video>
+      <div class="main-stuff">
+        <h1 class="title">NOBUNAGA</h1>
+        <img class="emoji" src="/public/emojis/nobunaga-emoji.webp">
+        <div class="subtitles">
+          <p data-role="about">ABOUT </p>
+          <p data-role="skills">SKILLS </p>
+          <p data-role="weapons">WEAPONS </p>
+          <p data-role="upgrades">UPGRADES </p>
+        </div>
+        <div>
+          <div id="about">
+            <h3>Role: Senitinel</h3>
+            <p>
+              Leading the First investigation Squad of P.U.S is Captain Nobunaga. Haunted by the betreyal of his own brother,
+              Reichii, Nobunaga's pursuit of truth is relentless and exhaustive.
+            </p>
+          </div>
+          <div id="skills" class="skills">
+            <div class="skill-images">
+              <img
+                src="/public/agents/nobunaga/Nobunaga Active Skill.webp"
+                data-role="active-skill"
+                alt="nobunaga ActiveSkill"
+              />
+              <img
+                src="/public/agents/nobunaga/Nobunaga Passive Skill.webp"
+                data-role="passive-skill"
+                alt="nobunaga PassiveSkill"
+              />
+              <img
+                src="/public/agents/nobunaga/Nobunaga Ultimate Skill.webp"
+                data-role="ultimate-skill"
+                alt="nobunaga UltimateSkill"
+              />
+            </div>
+            <div class="skill-title">
+              <p data-role="about">ABOUT</p>
+              <p data-role="details">DETAILS</p>
+              <p data-role="video">VIDEO</p>
+            </div>
+            <div>
+              <div id="active-skill">
+                <div id="about">
+                  <div class="active-about" data-role="about-skill">
+                    <h3 class="skill-name">Guardian Eye</h3>
+                    <p>Type: Damage</p>
+                    <p>
+                      Nobunaga can deploy up to 2 Guardian Eyes. While near a deployed Guardian Eye, he benefits from increased fire
+                      rate, better weapon usability, and armor regeneration. The bonuses are amplified when two Guardian Eyes are
+                      connected.
+                    </p>
+                  </div>
+                </div>
+                <div id="details">
+                  <h3 class="skill-name">Guardian Eye</h3>
+                  <h4>Details</h4>
+                  <ul>
+                    <li>The guardian eye has a cooldown of 20 seconds and a AoE radius of 10.</li>
+                    <li>The effects of the guardian eye only works on Nobunaga</li>
+                    <li>Effect is stackable but the ability enchancement can't be stacked</li>
+                    <li>The cooldown will start once a Guardian Eye is recycled</li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <h3 class="skill-name">Guardian Eye</h3>
+                  <video width="400" controls loop>
+                    <source src="/public/agents/nobunaga/Nobunaga Active Vid.mp4" />
+                  </video>
+                </div>
+              </div>
+              <div id="passive-skill">
+                <div id="about">
+                  <h3 class="skill-name" >Blinding Shot</h3>
+                  <p>Type: Weaken</p>
+                  <p>
+                    When Nobunaga can charge up her shots when shooting in ads. These fully charged shots cause enemies to have
+                    increase shoulder fire spread and lose their crosshairs with reduced accuracy in ads mode.
+                  </p>
+                </div>
+                <div id="details">
+                  <h3 class="skill-name" >Blinding Shot</h3>
+                  <h4>Details</h4>
+                  <ul>
+                    <li>Pretty self explanatory</li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <h3 class="skill-name" >Blinding Shot</h3>
+                  <video width="400" controls loop>
+                    <source src="/public/agents/nobunaga/Nobunaga Passive Vid.mp4" />
+                  </video>
+                </div>
+              </div>
+              <div id="ultimate-skill">
+                <div id="about">
+                  <h3 class="skill-name">Pulse Overload</h3>
+                  <p>Type: Detect</p>
+                  <p>
+                    Nobunaga deploys a pulse generator that emits waves in a 360 degree radius, revealing struck enemies to all
+                    teammates and applying silence for a duration.
+                  </p>
+                </div>
+                <div id="details">
+                  <h3 class="skill-name">Pulse Overload</h3>
+                  <h4>Details</h4>
+                  <ul>
+                    <li>This ultimate last 16 seconds with a 2 second cast time</li>
+                    <li>Cost: 7 Ultimate Points</li>
+                    <li>The device can be destroyed, ending its effects early</li>
+                    <li>Device health: 100</li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <h3 class="skill-name">Pulse Overload</h3>
+                  <video width="400" controls loop>
+                    <source src="/public/agents/nobunaga/Nobunaga Ultimate Vid.mp4" />
+                  </video>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="weapons" data-role="weapon">
+            <h3>Primary Gun: Judge</h3>
+            <img src="/public/agents/nobunaga/Nobunaga Weapon.webp" />
+            <p>
+              This automatic rifle uses high-powered rounds for superior combat effectiveness, making it suitable for all-weather operations. Comes equipped with a 1.5x scope.
+            </p>
+          </div>
+          <div id="upgrades" data-role="upgrades">
+            <h2>Upgrades</h2>
+            <img src="/public/shared/Accuracy.png" loading="lazy" />
+            <img src="/public/agents/nobunaga/Nobunaga Firing.png" loading="lazy" />
+            <img src="/public/shared/Capacity.png" loading="lazy" />
+            <img src="/public/shared/Critical Hit.png" loading="lazy" />
+            <img src="/public/agents/nobunaga/Nobunaga Active Upgrade.png" loading="lazy" />
+            <img src="/public/agents/nobunaga/Nobunaga Passive Upgrade.png" loading="lazy" />
+            <img src="/public/shared/Armor.png" loading="lazy" />
+            <img src="/public/shared/Stringify.png" loading="lazy" />
+          </div>
+        </div>
       </div>
-      <div id="Nobunaga-UltimateSkill">
-        <h3>Ultimate Skill:Pulse Overload</h3>
-        <img src="/public/agents/nobunaga/Nobunaga Ultimate Skill.webp" alt="Nobunaga UltimateSkill" />
-        <p>Type: Detect</p>
-        <p>
-          Nobunaga deploys a pulse generator that emits waves in a 360 degree radius, revealing struck enemies to all
-          teammates and applying silence for a duration.
-        </p>
-        <h4>Details</h4>
-        <ul>
-          <li>This ultimate last 16 seconds with a 2 second cast time</li>
-          <li>Cost: 7 Ultimate Points</li>
-          <li>With 100 hp, the pulse generator can be destroyed, ending its effect early</li>
-        </ul>
-        <h4>How to play</h4>
-        <video width="400" controls autoplay loop>
-          <source src="/public/agents/nobunaga/Nobunaga Ultimate Vid.mp4" />
-        </video>
-      </div>
     </div>
-    <div id="Nobunaga-Weapon">
-      <h2>Weapon</h2>
-      <h3>Primary Gun: Judge</h3>
-      <img src="/public/agents/nobunaga/Nobunaga Weapon.webp" alt="Nobunaga PrimaryGun" />
-    </div>
-    <div id="Nobunaga-Upgrade">
-      <hr />
-      <h2>Upgrades</h2>
-      <img src="/public/shared/Accuracy.png" loading="lazy" />
-      <img src="/public/agents/nobunaga/Nobunaga Firing.png" loading="lazy" />
-      <img src="Capacity.png" loading="lazy" />
-      <img src="/public/shared/Critical Hit.png" loading="lazy" />
-      <img src="/public/agents/nobunaga/Nobunaga Active Upgrade.png" loading="lazy" />
-      <img src="/public/agents/nobunaga/Nobunaga Passive Upgrade.png" loading="lazy" />
-      <img src="/public/shared/Armor.png" loading="lazy" />
-      <img src="/public/shared/Stringify.png" loading="lazy" />
-    </div>
-    <footer>
-      <span>henryphanisthebest@gmail.com</span>
-      <span>©2025 - 2030IDS/KSH. ALL RIGHTS RESERVED.</span>
-    </footer>
+
+    <script src="../all-agent.js"></script>
   </body>
 </html>
+
