--- a/src/app/agents/routes/Reiichi.html
+++ b/src/app/agents/routes/Reiichi.html
@@ -6,96 +6,158 @@
     <title>Reiichi | Strinova Fan Page</title>
     <link rel="icon" href="/public/facion.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="/src/app/globals.css" />
+    <link rel="stylesheet" type="text/css" href="../pus-agent.css" />
   </head>
   <body>
     <nav class="navbar">
       <div class="main"><a href="/src/app/index.html">STRINOVA</a></div>
       <div class="sub">
-        <div><a href="/src/app/agents/page.html">Agents</a></div>
-        <div><a href="/src/app/maps/page.html">Maps</a></div>
-        <div><a href="/src/app/mechanics/page.html">Mechanics</a></div>
+        <a href="/src/app/agents/page.html">AGENTS</a>
+        <a href="/src/app/maps/page.html">MAPS</a>
+        <a href="/src/app/mechanics/page.html">MECHANICS</a>
       </div>
     </nav>
-    <div id="Reiichi">
-      <img src="/public/agents/reiichi/Reiichi.webp" alt="Reiichi" width="400" />
-      <h1>Reiichi</h1>
-      <h3>Role: Controller</h3>
-      <h2>Background</h2>
-      <p>
-        In a meticulously plotted move, Reiichi betrayed P.U.S, leaving everyone in the dark about his true intentions
-        for joining The Scissors.
-      </p>
-    </div>
-    <hr />
-    <div id="-Skills">
-      <h2>Skills</h2>
-      <div id="Reiichi-ActiveSkill">
-        <h3>Active Skill: Daybreak</h3>
-        <img src/public/agents/reiichi/="Reiichi Ultimate Skill.webp" alt="Reiichi ActiveSkill" />
-        <p>Type: Block</p>
-        <p>Reiichi can generate a horizontal or vertical sacred light with his umbrella to block enemy vision.</p>
-        <h4>Details</h4>
-        <ul>
-          <li>Range: 50 meters</li>
-          <li>Deployment Duration: 1 Second</li>
-        </ul>
-        <h4>How to play</h4>
-        <video width="400" controls autoplay loop>
-          <source src/public/agents/reiichi/="Reiichi Active Skill.mp4" />
-        </video>
+
+    <div class="agent">
+      <div class="agent-image-container">
+        <img class="agent-symbol" src="/public/bg/scissors-symbol.png" width="500" />
+        <img class="agent-image" src="/public/agents/reiichi/Reiichi.webp" alt="Michele" width="500" />
       </div>
-      <div id="Reiichi-PassiveSkill">
-        <h3>Passive Skill: Dawn's Insight</h3>
-        <img src/public/agents/reiichi/="Reiichi Passive Skill.webp" alt="Reiichi PassiveSkill" />
-        <p>Type: Detect</p>
-        <p>Reiichi regularly scans frontal enemies and summons while in ADS mode, which are exposed only to him.</p>
-        <h4>Details</h4>
-        <ul>
-          <li>Revealed Duration: 2 Seconds</li>
-          <li>Charge up time: 5 Seconds</li>
-        </ul>
-        <h4>How to play</h4>
-        <video width="400" controls autoplay loop>
-          <source src/public/agents/reiichi/="Reiichi Passive Skill.mp4" />
-        </video>
+      <div class="main-stuff">
+        <h1 class="title">REIICHI</h1>
+        <img class="emoji" src="/public/emojis/reiichi-emoji.webp">
+        <div class="subtitles">
+          <p data-role="about">ABOUT </p>
+          <p data-role="skills">SKILLS </p>
+          <p data-role="weapons">WEAPONS </p>
+          <p data-role="upgrades">UPGRADES </p>
+        </div>
+        <div>
+          <div id="about">
+            <h3>Role: Controller</h3>
+            <p>
+            In a meticulously plotted move, Reiichi betrayed P.U.S, leaving everyone in the dark about his true intentions
+            for joining The Scissors.
+            </p>
+          </div>
+          <div id="skills" class="skills">
+            <div class="skill-images">
+              <img
+                src="/public/agents/reiichi/Reiichi Active Skill.webp"
+                data-role="active-skill"
+                alt="bai-mo ActiveSkill"
+              />
+              <img
+                src="/public/agents/reiichi/Reiichi Passive Skill.webp"
+                data-role="passive-skill"
+                alt="bai-mo PassiveSkill"
+              />
+              <img
+                src="/public/agents/reiichi/Reiichi Ultimate Skill.webp"
+                data-role="ultimate-skill"
+                alt="bai-mo UltimateSkill"
+              />
+            </div>
+            <div class="skill-title">
+              <p data-role="about">ABOUT</p>
+              <p data-role="details">DETAILS</p>
+              <p data-role="video">VIDEO</p>
+            </div>
+            <div>
+              <div id="active-skill">
+                <div id="about">
+                  <div class="active-about" data-role="about-skill">
+                    <h3 class="skill-name">Daybreak</h3>
+                    <p>Type: Block</p>
+                    <p>
+                      Reiichi can generate a horizontal or vertical sacred light with his umbrella to block enemy vision.
+                    </p>
+                  </div>
+                </div>
+                <div id="details">
+                  <h3 class="skill-name">Daybreak</h3>
+                  <h4>Details</h4>
+                  <ul>
+                    <li>Range: 50 meters</li>
+                    <li>Deployment Duration: 1 Second</li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <h3 class="skill-name">Daybreak</h3>
+                  <video width="400" controls loop>
+                    <source src="/public/agents/reiichi/Reiichi Active Skill.mp4" />
+                  </video>
+                </div>
+              </div>
+              <div id="passive-skill">
+                <div id="about">
+                  <h3 class="skill-name" >Dawn's Insight</h3>
+                  <p>Type: Detect</p>
+                  <p>
+                    Reiichi regularly scans frontal enemies and summons while in ADS mode, which are exposed only to him.
+                  </p>
+                </div>
+                <div id="details">
+                  <h3 class="skill-name" >Dawn's Insight</h3>
+                  <h4>Details</h4>
+                  <ul>
+                    <li>Revealed Duration: 2 Seconds</li>
+                    <li>Charge up time: 5 Seconds</li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <h3 class="skill-name" >Dawn's Insight</h3>
+                  <video width="400" controls loop>
+                    <source src="/public/agents/reiichi/Reiichi Passive Skill.mp4" />
+                  </video>
+                </div>
+              </div>
+              <div id="ultimate-skill">
+                <div id="about">
+                  <h3 class="skill-name">Sanctified Shield</h3>
+                  <p>Type: Enchance</p>
+                  <p>
+                    Reiichi instantly refreshes his active skill, enhancing the Light Screen to block all enemy bullets.
+                  </p>
+                </div>
+                <div id="details">
+                  <h3 class="skill-name">Sanctified Shield</h3>
+                  <h4>Details</h4>
+                  <ul>
+                    <li>Cost: 7 Ultimate Points</li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <h3 class="skill-name">Sanctified Shield</h3>
+                  <video width="400" controls loop>
+                    <source src="/public/agents/reiichi/Reiichi Ultimate Skill.mp4" />
+                  </video>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="weapons" data-role="weapon">
+            <h3>Primary Gun: Freedom Dawn</h3>
+            <img src="/public/agents/reiichi/Reiichi Gun Dawn.webp" />
+            <p>
+              This stable and durable marksman rifle offers excellent control. Its specially weighted rounds enhance long-range accuracy. Equipped with a 2.5x scope.
+            </p>
+          </div>
+          <div id="upgrades" data-role="upgrades">  
+            <h2>Upgrades</h2>
+            <img src="/public/agents/reiichi/Reiichi Accuracy.png" loading="lazy" />
+            <img src="/public/shared/Critical Hit.png" loading="lazy" />
+            <img src="/public/shared/Core.png" loading="lazy" />
+            <img src="/public/shared/Capacity.png" loading="lazy" />
+            <img src="/public/agents/reiichi/Reiichi Active Upgrade.png" loading="lazy" /> 
+            <img src="/public/agents/reiichi/Reiichi Passive Upgrade.png" loading="lazy" />
+            <img src="/public/shared/Armor.png" loading="lazy" />
+            <img src="/public/shared/Stringify.png" loading="lazy" />
+          </div>
+        </div>
       </div>
-      <div id="Reiichi-UltimateSkill">
-        <h3>Ultimate Skill: Sanctified Shield</h3>
-        <img src/public/agents/reiichi/="Reiichi Ultimate Skill.webp" alt="Reiichi UltimateSkill" />
-        <p>Type: Enchance</p>
-        <p>Reiichi instantly refreshes his active skill, enhancing the Light Screen to block all enemy bullets.</p>
-        <h4>Details</h4>
-        <ul>
-          <li>Cost: 7 Ultimate Points</li>
-        </ul>
-        <h4>How to play</h4>
-        <video width="400" controls autoplay loop>
-          <source src/public/agents/reiichi/="Reiichi Ultimate Skill.mp4" />
-        </video>
-      </div>
     </div>
-    <hr />
-    <div id="Reiichi-Weapon">
-      <h2>Weapon</h2>
-      <h3>Primary Gun: Dawn</h3>
-      <img src/public/agents/reiichi/="Reiichi Gun Dawn.webp" />
-      <p></p>
-    </div>
-    <div id="Reiichi-Upgrades">
-      <hr />
-      <h2>Upgrades</h2>
-      <img src/public/agents/reiichi/="Reiichi Accuracy.png" loading="lazy" />
-      <img src="/public/shared/Critical Hit.png" loading="lazy" />
-      <img src="Core.png" loading="lazy" />
-      <img src="Capacity.png" loading="lazy" />
-      <img src/public/agents/reiichi/="Reiichi Active Upgrade.png" loading="lazy" /> <img
-      src/public/agents/reiichi/="Reiichi Passive Upgrade.png" loading="lazy" />
-      <img src="/public/shared/Armor.png" loading="lazy" />
-      <img src="/public/shared/Stringify.png" loading="lazy" />
-    </div>
-    <footer>
-      <span>henryphanisthebest@gmail.com</span>
-      <span>©2025 - 2030IDS/KSH. ALL RIGHTS RESERVED.</span>
-    </footer>
+
+    <script src="../all-agent.js"></script>
   </body>
 </html>
